Ajustado el campo de nombre de evento

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
       <section class="form-group">
         <h2>Formularios de Eventos y Open Day</h2>
         <div class="card-container">
-          <a href="./Formulario de Eventos y Open Day/Código HTML, CSS y JS.html" class="form-card">
+          <a href="./Formulario de Eventos y Open Day/index.html" class="form-card">
             <h3>Formulario Eventos y Open Day</h3>
             <p>Formulario principal para eventos generales y jornadas de puertas abiertas</p>
             <span class="arrow">→</span>
           </a>
-          
+
           <a href="./assets/formulario Open Day_Example.html" class="form-card">
             <h3>Formulario Open Day (Ejemplo)</h3>
             <p>Ejemplo de formulario para jornadas de puertas abiertas</p>
             <span class="arrow">→</span>
           </a>
-          
+
           <a href="./Open day v2-Ejemplo segmentado/index.html" class="form-card">
             <h3>Open Day v2 - Ejemplo Segmentado</h3>
             <p>Versión segmentada del formulario Open Day con mejoras</p>
