COrregido campo nivel académico duplicado

--- a/Formulario de Eventos y Open Day/index.html
+++ b/Formulario de Eventos y Open Day/index.html
@@ -93,12 +93,7 @@
         </select>
         <div class="error_text" id="error_type_attendee" style="display: none;">Selecciona un tipo de asistente</div>
         
-        <!-- Nivel académico -->
-        <select id="academic_level" name="academic_level" required>
-          <option value="">*Nivel académico de interés</option>
-          <!-- Options will be populated by JavaScript -->
-        </select>
-        <div class="error_text" id="error_academic_level" style="display: none;">Selecciona un nivel académico de interés</div>
+        <!-- Nivel académico se crea dinámicamente desde JS -->
         
         <!-- Facultad -->
         <select id="faculty" name="Facultad" style="display: none;">
