--- a/form-modules/examples/index-styles.html
+++ b/form-modules/examples/index-styles.html
@@ -7,114 +7,223 @@
     <link rel="stylesheet" href="../styles/form-styles.css" />
   </head>
   <body>
-    <form id="form-id">
+    <form id="form_inscription" novalidate aria-label="Formulario de contacto">
+      <!-- Información del participante -->
       <div class="name-row">
         <div class="name-field">
           <input
             type="text"
             placeholder="*Nombre(s)"
-            id="advanced_first_name"
+            id="first_name"
             name="first_name"
+            maxlength="40"
             required
           />
+          <div class="error_text" id="error_first_name" style="display: none">
+            Completa este campo
+          </div>
         </div>
         <div class="name-field">
           <input
             type="text"
             placeholder="*Apellidos"
-            id="advanced_last_name"
+            id="last_name"
             name="last_name"
+            maxlength="80"
             required
           />
+          <div class="error_text" id="error_last_name" style="display: none">
+            Completa este campo
+          </div>
         </div>
       </div>
 
-      <select id="advanced_type_doc" name="type_doc" required>
-        <option value="">*Tipo de documento</option>
-        <option value="CC">Cédula de Ciudadanía</option>
-        <option value="CE">Cédula de Extranjería</option>
-        <option value="TI">Tarjeta de Identidad</option>
-        <option value="PP">Pasaporte</option>
-      </select>
+      <!-- Documento de identidad -->
+      <div class="document-row">
+        <div class="document-type-field">
+          <select id="type_doc" name="type_doc" required>
+            <option value="">*Tipo de documento</option>
+            <option value="CC">Cédula Ciudadanía</option>
+            <option value="CE">Cédula Extranjería</option>
+            <option value="PA">Pasaporte</option>
+            <option value="TI">Tarjeta Identidad</option>
+          </select>
+          <div class="error_text" id="error_type_doc" style="display: none">
+            Selecciona un tipo de documento
+          </div>
+        </div>
+        <div class="document-number-field">
+          <input
+            type="text"
+            placeholder="*Número de documento"
+            id="document"
+            name="document"
+            maxlength="255"
+            required
+          />
+          <div class="error_text" id="error_document" style="display: none">
+            Ingresa un número de documento válido
+          </div>
+        </div>
+      </div>
 
-      <input
-        type="text"
-        placeholder="*Número de documento"
-        id="advanced_document"
-        name="document"
-        required
-      />
+      <!-- Email -->
+      <input type="email" placeholder="*Email" id="email" name="email" maxlength="80" required />
+      <div class="error_text" id="error_email" style="display: none">
+        Ingresa un correo electrónico válido
+      </div>
 
-      <input type="email" placeholder="*Email" id="advanced_email" name="email" required />
-
+      <!-- Phone row -->
       <div class="phone-row">
         <div class="prefix-field">
-          <select id="advanced_phone_code" name="phone_code" required>
+          <select id="phone_code" name="phone_code" required>
             <option value="">(+) Indicativo</option>
+            <!-- Options will be populated by JavaScript -->
           </select>
+          <div class="error_text" id="error_phone_code" style="display: none">
+            Selecciona un prefijo
+          </div>
         </div>
         <div class="mobile-field">
-          <input type="text" placeholder="*Teléfono" id="advanced_phone" name="phone" required />
+          <input
+            type="text"
+            placeholder="*Teléfono celular"
+            id="phone"
+            name="mobile"
+            minlength="8"
+            maxlength="15"
+            required
+          />
+          <div class="error_text" id="error_phone" style="display: none">
+            Ingresa un número de teléfono válido
+          </div>
         </div>
       </div>
 
-      <select id="advanced_country" name="country" required>
+      <!-- Ubicación -->
+      <select id="country" name="country" required>
         <option value="">*País de residencia</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_country" style="display: none">Selecciona un país</div>
 
-      <select id="advanced_department" name="department" style="display: none">
-        <option value="">*Departamento</option>
+      <select id="department" name="department" style="display: none">
+        <option value="">*Selecciona el departamento</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_department" style="display: none">
+        Selecciona un departamento
+      </div>
 
-      <select id="advanced_city" name="city" style="display: none">
-        <option value="">*Ciudad</option>
+      <select id="city" name="city" style="display: none">
+        <option value="">*Selecciona la Ciudad</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_city" style="display: none">Selecciona una ciudad</div>
 
-      <select id="advanced_type_attendee" name="type_attendee" required>
-        <option value="">*Tipo de asistente</option>
-      </select>
-
-      <select id="advanced_attendance_day" name="attendance_day" required>
+      <!-- Día de asistencia -->
+      <select id="attendance_day" name="attendance_day" required>
         <option value="">*Día de asistencia</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_attendance_day" style="display: none">
+        Selecciona un día de asistencia
+      </div>
 
-      <select id="advanced_academic_level" name="academic_level" style="display: none">
-        <option value="">*Nivel académico</option>
+      <!-- Tipo de asistente -->
+      <select id="type_attendee" name="type_attendee" required>
+        <option value="">*Tipo de asistente</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_type_attendee" style="display: none">
+        Selecciona un tipo de asistente
+      </div>
 
-      <select id="advanced_faculty" name="faculty" style="display: none">
-        <option value="">*Facultad</option>
+      <!-- Nivel académico se crea dinámicamente desde JS -->
+
+      <!-- Facultad -->
+      <select id="faculty" name="Facultad" style="display: none">
+        <option value="">*Facultad de interés</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_faculty" style="display: none">
+        Selecciona una facultad de interés
+      </div>
 
-      <select id="advanced_program" name="program" style="display: none">
-        <option value="">*Programa</option>
+      <!-- Programa -->
+      <select id="program" name="program" style="display: none">
+        <option value="">*Programa de interés</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_program" style="display: none">
+        Selecciona un programa de interés
+      </div>
 
-      <select id="advanced_admission_period" name="admission_period" style="display: none">
-        <option value="">*Período de admisión</option>
+      <!-- Período de ingreso -->
+      <select id="admission_period" name="admission_period" style="display: none">
+        <option value="">*Periodo esperado de Ingreso de interés</option>
+        <!-- Options will be populated by JavaScript -->
       </select>
+      <div class="error_text" id="error_admission_period" style="display: none">
+        Selecciona un periodo de interés
+      </div>
 
-      <div class="radio-inline-group">
-        <p>¿Autorizas el tratamiento de tus datos personales?</p>
-        <div class="radio-option">
-          <input type="radio" id="advanced_auth_yes" name="authorization_data" value="1" />
-          <label for="advanced_auth_yes">Sí</label>
+      <!-- Autorización de datos -->
+      <div style="margin-top: 20px">
+        <p style="color: #666">
+          ¿Autorizas el tratamiento de tus datos personales de acuerdo con la
+          <a
+            href="https://cloud.cx.javeriana.edu.co/tratamiento_Datos_Javeriana_Eventos.html"
+            style="color: #4d7fcb"
+            target="_blank"
+            >autorización de privacidad</a
+          >?
+        </p>
+
+        <div class="radio-inline-group">
+          <div class="radio-option">
+            <input type="radio" id="autorizacion_si" name="authorization_data" value="1" />
+            <label for="autorizacion_si" style="color: #333; margin-left: 5px">Sí</label>
+          </div>
+          <div class="radio-option">
+            <input type="radio" id="autorizacion_no" name="authorization_data" value="0" />
+            <label for="autorizacion_no" style="color: #333; margin-left: 5px">No</label>
+          </div>
         </div>
-        <div class="radio-option">
-          <input type="radio" id="advanced_auth_no" name="authorization_data" value="0" />
-          <label for="advanced_auth_no">No</label>
+
+        <div
+          class="error_text"
+          id="error_authorization_data"
+          style="display: none; margin-top: 10px"
+        >
+          La Pontificia Universidad Javeriana requiere de tu autorización para el tratamiento de tus
+          datos personales para continuar con el presente proceso, sin la autorización legalmente no
+          podemos darte continuidad al mismo.
         </div>
       </div>
 
-      <button type="submit" class="submit-btn" disabled>
-        <span class="status-indicator status-ready"></span>
-        Registrarme al Evento
+      <button type="submit" id="submit_btn" disabled style="margin-top: 20px">
+        Inscríbete ahora
       </button>
+
+      <div
+        id="successMsg"
+        style="
+          border: 2px solid green;
+          background-color: lightgrey;
+          padding: 10px;
+          border-radius: 5px;
+          display: none;
+          margin-top: 10px;
+        "
+      >
+        Gracias por tu mensaje. Ha sido enviado.
+      </div>
     </form>
 
     <script type="module">
       import { FormManager } from "../modules/FormManager.js";
-      const form = new FormManager("form-id", {
+      const form = new FormManager("form_inscription", {
         logging: {
           enabled: true,
           level: "debug",
