--- a/form-modules/examples/index.html
+++ b/form-modules/examples/index.html
@@ -292,12 +292,13 @@
                 </div>
                 <div class="gh-form-container">
                   <form id="advanced_form">
+                    <!-- Información del participante -->
                     <div class="name-row">
                       <div class="name-field">
                         <input
                           type="text"
                           placeholder="*Nombre(s)"
-                          id="advanced_first_name"
+                          data-puj-form="first_name"
                           name="first_name"
                           required
                         />
@@ -306,123 +307,168 @@
                         <input
                           type="text"
                           placeholder="*Apellidos"
-                          id="advanced_last_name"
+                          data-puj-form="last_name"
                           name="last_name"
                           required
                         />
                       </div>
                     </div>
 
-                    <select id="advanced_type_doc" name="type_doc" required>
-                      <option value="">*Tipo de documento</option>
-                      <option value="CC">Cédula de Ciudadanía</option>
-                      <option value="CE">Cédula de Extranjería</option>
-                      <option value="TI">Tarjeta de Identidad</option>
-                      <option value="PP">Pasaporte</option>
-                    </select>
+                    <!-- Documento de identidad -->
+                    <div class="document-row">
+                      <div class="document-type-field">
+                        <select data-puj-form="type_doc" name="type_doc" required>
+                          <option value="">*Tipo de documento</option>
+                          <option value="CC">Cédula Ciudadanía</option>
+                          <option value="CE">Cédula Extranjería</option>
+                          <option value="PA">Pasaporte</option>
+                          <option value="TI">Tarjeta Identidad</option>
+                        </select>
+                      </div>
+                      <div class="document-number-field">
+                        <input
+                          type="text"
+                          placeholder="*Número de documento"
+                          data-puj-form="document"
+                          name="document"
+                          required
+                        />
+                      </div>
+                    </div>
 
-                    <input
-                      type="text"
-                      placeholder="*Número de documento"
-                      id="advanced_document"
-                      name="document"
-                      required
-                    />
-
+                    <!-- Email -->
                     <input
                       type="email"
                       placeholder="*Email"
-                      id="advanced_email"
+                      data-puj-form="email"
                       name="email"
+                      maxlength="80"
                       required
                     />
 
+                    <!-- Phone row -->
                     <div class="phone-row">
                       <div class="prefix-field">
-                        <select id="advanced_phone_code" name="phone_code" required>
+                        <select data-puj-form="phone_code" name="phone_code" required>
                           <option value="">(+) Indicativo</option>
+                          <!-- Options will be populated by JavaScript -->
                         </select>
                       </div>
                       <div class="mobile-field">
                         <input
                           type="text"
-                          placeholder="*Teléfono"
-                          id="advanced_phone"
+                          placeholder="*Teléfono celular"
+                          data-puj-form="phone"
                           name="phone"
                           required
                         />
                       </div>
                     </div>
 
-                    <select id="advanced_country" name="country" required>
+                    <!-- Ubicación -->
+                    <select data-puj-form="country" name="country" required>
                       <option value="">*País de residencia</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
-                    <select id="advanced_department" name="department" style="display: none">
-                      <option value="">*Departamento</option>
+                    <select data-puj-form="department" name="department" style="display: none">
+                      <option value="">*Selecciona el departamento</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
-                    <select id="advanced_city" name="city" style="display: none">
-                      <option value="">*Ciudad</option>
+                    <select data-puj-form="city" name="city" style="display: none">
+                      <option value="">*Selecciona la Ciudad</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
-                    <select id="advanced_type_attendee" name="type_attendee" required>
-                      <option value="">*Tipo de asistente</option>
-                    </select>
-
-                    <select id="advanced_attendance_day" name="attendance_day" required>
+                    <!-- Día de asistencia -->
+                    <select data-puj-form="attendance_day" name="attendance_day" required>
                       <option value="">*Día de asistencia</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
+
+                    <!-- Tipo de asistente -->
+                    <select data-puj-form="type_attendee" name="type_attendee" required>
+                      <option value="">*Tipo de asistente</option>
+                      <!-- Options will be populated by JavaScript -->
+                    </select>
+
+                    <!-- Nivel académico se crea dinámicamente desde JS -->
 
                     <select
-                      id="advanced_academic_level"
+                      data-puj-form="academic_level"
                       name="academic_level"
                       style="display: none"
                     >
                       <option value="">*Nivel académico</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
-                    <select id="advanced_faculty" name="faculty" style="display: none">
-                      <option value="">*Facultad</option>
+                    <!-- Facultad -->
+                    <select data-puj-form="faculty" name="Facultad" style="display: none">
+                      <option value="">*Facultad de interés</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
-                    <select id="advanced_program" name="program" style="display: none">
-                      <option value="">*Programa</option>
+                    <!-- Programa -->
+                    <select data-puj-form="program" name="program" style="display: none">
+                      <option value="">*Programa de interés</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
+                    <!-- Período de ingreso -->
                     <select
-                      id="advanced_admission_period"
+                      data-puj-form="admission_period"
                       name="admission_period"
                       style="display: none"
                     >
-                      <option value="">*Período de admisión</option>
+                      <option value="">*Periodo esperado de Ingreso de interés</option>
+                      <!-- Options will be populated by JavaScript -->
                     </select>
 
-                    <div class="radio-inline-group">
-                      <p>¿Autorizas el tratamiento de tus datos personales?</p>
-                      <div class="radio-option">
-                        <input
-                          type="radio"
-                          id="advanced_auth_yes"
-                          name="authorization_data"
-                          value="1"
-                        />
-                        <label for="advanced_auth_yes">Sí</label>
+                    <!-- Autorización de datos -->
+                    <div>
+                      <p>
+                        ¿Autorizas el tratamiento de tus datos personales de acuerdo con la
+                        <a
+                          href="https://cloud.cx.javeriana.edu.co/tratamiento_Datos_Javeriana_Eventos.html"
+                          target="_blank"
+                        >
+                          autorización de privacidad
+                        </a>
+                        ?
+                      </p>
+
+                      <div class="radio-inline-group">
+                        <div class="radio-option">
+                          <input
+                            type="radio"
+                            data-puj-form="autorizacion_si"
+                            name="authorization_data"
+                            value="1"
+                          />
+                          <label for="autorizacion_si">Sí</label>
+                        </div>
+                        <div class="radio-option">
+                          <input
+                            type="radio"
+                            data-puj-form="autorizacion_no"
+                            name="authorization_data"
+                            value="0"
+                          />
+                          <label for="autorizacion_no">No</label>
+                        </div>
                       </div>
-                      <div class="radio-option">
-                        <input
-                          type="radio"
-                          id="advanced_auth_no"
-                          name="authorization_data"
-                          value="0"
-                        />
-                        <label for="advanced_auth_no">No</label>
+
+                      <div class="error_text" id="error_authorization_data">
+                        La Pontificia Universidad Javeriana requiere de tu autorización para el
+                        tratamiento de tus datos personales para continuar con el presente proceso,
+                        sin la autorización legalmente no podemos darte continuidad al mismo.
                       </div>
                     </div>
 
-                    <button type="submit" class="submit-btn" disabled>
-                      <span class="status-indicator status-ready"></span>
-                      Registrarme al Evento
+                    <button type="submit" id="submit_btn" disabled style="margin-top: 20px">
+                      Inscríbete ahora
                     </button>
                   </form>
                 </div>
