--- a/form-modules/examples/index.html
+++ b/form-modules/examples/index.html
@@ -292,7 +292,7 @@
                 </div>
                 <div class="gh-form-container">
                   <div class="form-card">
-                    <form class="advanced_form" novalidate aria-label="Formulario de contacto">
+                    <form id="advanced_form" novalidate aria-label="Formulario de contacto">
                       <!-- Información del participante -->
                       <div class="name-row">
                         <div class="name-field">
