--- a/form-modules/examples/index.html
+++ b/form-modules/examples/index.html
@@ -246,10 +246,10 @@
                 <span class="gh-example-badge gh-badge-advanced">Avanzado</span>
               </div>
               <div class="gh-example-actions">
-                <button class="gh-btn gh-btn-sm gh-btn-outline">
+                <button class="gh-btn gh-btn-sm gh-btn-outline" onclick="showCodeModal('advanced')">
                   <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
                     <path
-                      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                      d="M4.72 3.22a.75.75 0 011.06 1.06L2.06 8l3.72 3.72a.75.75 0 11-1.06 1.06L.47 8.53a.75.75 0 010-1.06l4.25-4.25zm6.56 0a.75.75 0 10-1.06 1.06L13.94 8l-3.72 3.72a.75.75 0 101.06 1.06l4.25-4.25a.75.75 0 000-1.06L11.28 3.22z"
                     />
                   </svg>
                   Código
@@ -290,8 +290,9 @@
                     <span class="gh-status-text">Listo</span>
                   </div>
                 </div>
-                <div class="gh-form-container">
-                  <div class="form-card">
+                <div class="gh-form-container gh-form-with-code">
+                  <div class="gh-form-left">
+                    <div class="form-card">
                     <form id="advanced_form" novalidate aria-label="Formulario de contacto">
                       <!-- Información del participante -->
                       <div class="name-row">
@@ -470,102 +471,104 @@
 
                       <button type="submit" id="submit_btn" disabled>Inscríbete ahora</button>
                     </form>
+                    </div>
+                  </div>
+                  
+                  <div class="gh-form-right">
+                    <div class="gh-code-section">
+                      <div class="gh-code-header">
+                        <h5 class="gh-code-title">Código de Ejemplo</h5>
+                        <div class="gh-code-tabs">
+                          <button
+                            class="gh-code-tab gh-code-tab-active"
+                            onclick="showCodeTab('advanced', 'js')"
+                          >
+                            JavaScript
+                          </button>
+                          <button class="gh-code-tab" onclick="showCodeTab('advanced', 'html')">
+                            HTML
+                          </button>
+                          <button class="gh-code-tab" onclick="showCodeTab('advanced', 'config')">
+                            Config
+                          </button>
+                        </div>
+                        <button class="gh-copy-btn" onclick="copyCode('advanced', this)">
+                          <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
+                            <path
+                              d="M0 6.75C0 5.784.784 5 1.75 5h1.5a.75.75 0 010 1.5h-1.5a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-1.5a.75.75 0 011.5 0v1.5A1.75 1.75 0 019.25 16h-7.5A1.75 1.75 0 010 14.25v-7.5z"
+                            />
+                            <path
+                              d="M5 1.75C5 .784 5.784 0 6.75 0h7.5C15.216 0 16 .784 16 1.75v7.5A1.75 1.75 0 0114.25 11h-7.5A1.75 1.75 0 015 9.25v-7.5zm1.75-.25a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-7.5a.25.25 0 00-.25-.25h-7.5z"
+                            />
+                          </svg>
+                          Copiar
+                        </button>
+                      </div>
+
+                      <div id="advanced-js-code" class="gh-code-content">
+                        <pre id="advanced-js-content"></pre>
+                      </div>
+
+                      <div id="advanced-html-code" class="gh-code-content gh-code-hidden">
+                        <pre id="advanced-html-content"></pre>
+                      </div>
+
+                      <div id="advanced-config-code" class="gh-code-content gh-code-hidden">
+                        <pre id="advanced-config-content"></pre>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="gh-example-footer">
+                  <div class="gh-example-controls">
+                    <button class="gh-control-btn" onclick="advancedForm.reset()">
+                      <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
+                        <path
+                          d="M1.5 5.25a.75.75 0 01.75-.75h12.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75zM1.5 8.25a.75.75 0 01.75-.75h12.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75zM1.5 11.25a.75.75 0 01.75-.75h12.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75z"
+                        />
+                      </svg>
+                      Limpiar
+                    </button>
+                    <button
+                      class="gh-control-btn"
+                      onclick="advancedForm.setDebugMode(!advancedForm.config.debugMode)"
+                    >
+                      <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
+                        <path
+                          d="M8 1.5c-2.363 0-4 1.69-4 3.75 0 .984.424 1.625.984 2.304l.214.253c.223.264.47.556.673.848.284.411.537.896.621 1.49a.75.75 0 01-1.484.211c-.04-.282-.163-.547-.37-.847a8.695 8.695 0 00-.542-.68c-.084-.1-.173-.205-.268-.32C3.201 7.75 2.5 6.766 2.5 5.25 2.5 2.31 4.863 0 8 0s5.5 2.31 5.5 5.25c0 1.516-.701 2.5-1.328 3.259-.095.115-.184.22-.268.319-.207.245-.383.453-.541.681-.208.3-.33.565-.37.847a.75.75 0 01-1.485-.212c.084-.593.337-1.078.621-1.489.203-.292.45-.584.673-.848.075-.088.147-.173.213-.253.561-.679.985-1.32.985-2.304 0-2.06-1.637-3.75-4-3.75zM5.75 12h4.5a.75.75 0 010 1.5h-4.5a.75.75 0 010-1.5zM6 15.25a.75.75 0 01.75-.75h2.5a.75.75 0 010 1.5h-2.5a.75.75 0 01-.75-.75z"
+                        />
+                      </svg>
+                      Debug
+                    </button>
+                    <button
+                      class="gh-control-btn"
+                      onclick="advancedForm.setDevMode(!advancedForm.config.devMode)"
+                    >
+                      <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
+                        <path d="M8 4a4 4 0 100 8 4 4 0 000-8z" />
+                      </svg>
+                      Dev Mode
+                    </button>
+                    <button class="gh-control-btn" onclick="console.log(advancedForm.getFormData())">
+                      <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
+                        <path
+                          d="M1.5 1.75a.75.75 0 00-1.5 0v12.5c0 .414.336.75.75.75h14.5a.75.75 0 000-1.5H1.5V1.75zm14.28 2.53a.75.75 0 00-1.06-1.06L10 7.94 7.53 5.47a.75.75 0 00-1.06 0L3.22 8.72a.75.75 0 001.06 1.06L7 7.06l2.47 2.47a.75.75 0 001.06 0l5.25-5.25z"
+                        />
+                      </svg>
+                      Ver Datos
+                    </button>
+                    <button class="gh-control-btn" onclick="console.log(advancedForm.getLogs())">
+                      <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
+                        <path
+                          d="M8 1.5c-2.363 0-4 1.69-4 3.75 0 .984.424 1.625.984 2.304l.214.253c.223.264.47.556.673.848.284.411.537.896.621 1.49a.75.75 0 01-1.484.211c-.04-.282-.163-.547-.37-.847a8.695 8.695 0 00-.542-.68c-.084-.1-.173-.205-.268-.32C3.201 7.75 2.5 6.766 2.5 5.25 2.5 2.31 4.863 0 8 0s5.5 2.31 5.5 5.25c0 1.516-.701 2.5-1.328 3.259-.095.115-.184.22-.268.319-.207.245-.383.453-.541.681-.208.3-.33.565-.37.847a.75.75 0 01-1.485-.212c.084-.593.337-1.078.621-1.489.203-.292.45-.584.673-.848.075-.088.147-.173.213-.253.561-.679.985-1.32.985-2.304 0-2.06-1.637-3.75-4-3.75zM5.75 12h4.5a.75.75 0 010 1.5h-4.5a.75.75 0 010-1.5zM6 15.25a.75.75 0 01.75-.75h2.5a.75.75 0 010 1.5h-2.5a.75.75 0 01-.75-.75z"
+                        />
+                      </svg>
+                      Ver Logs
+                    </button>
                   </div>
                 </div>
               </div>
-            </div>
-
-            <div class="gh-example-footer">
-              <div class="gh-example-controls">
-                <button class="gh-control-btn" onclick="advancedForm.reset()">
-                  <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-                    <path
-                      d="M1.5 5.25a.75.75 0 01.75-.75h12.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75zM1.5 8.25a.75.75 0 01.75-.75h12.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75zM1.5 11.25a.75.75 0 01.75-.75h12.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75z"
-                    />
-                  </svg>
-                  Limpiar
-                </button>
-                <button
-                  class="gh-control-btn"
-                  onclick="advancedForm.setDebugMode(!advancedForm.config.debugMode)"
-                >
-                  <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-                    <path
-                      d="M8 1.5c-2.363 0-4 1.69-4 3.75 0 .984.424 1.625.984 2.304l.214.253c.223.264.47.556.673.848.284.411.537.896.621 1.49a.75.75 0 01-1.484.211c-.04-.282-.163-.547-.37-.847a8.695 8.695 0 00-.542-.68c-.084-.1-.173-.205-.268-.32C3.201 7.75 2.5 6.766 2.5 5.25 2.5 2.31 4.863 0 8 0s5.5 2.31 5.5 5.25c0 1.516-.701 2.5-1.328 3.259-.095.115-.184.22-.268.319-.207.245-.383.453-.541.681-.208.3-.33.565-.37.847a.75.75 0 01-1.485-.212c.084-.593.337-1.078.621-1.489.203-.292.45-.584.673-.848.075-.088.147-.173.213-.253.561-.679.985-1.32.985-2.304 0-2.06-1.637-3.75-4-3.75zM5.75 12h4.5a.75.75 0 010 1.5h-4.5a.75.75 0 010-1.5zM6 15.25a.75.75 0 01.75-.75h2.5a.75.75 0 010 1.5h-2.5a.75.75 0 01-.75-.75z"
-                    />
-                  </svg>
-                  Debug
-                </button>
-                <button
-                  class="gh-control-btn"
-                  onclick="advancedForm.setDevMode(!advancedForm.config.devMode)"
-                >
-                  <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-                    <path d="M8 4a4 4 0 100 8 4 4 0 000-8z" />
-                  </svg>
-                  Dev Mode
-                </button>
-                <button class="gh-control-btn" onclick="console.log(advancedForm.getFormData())">
-                  <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-                    <path
-                      d="M1.5 1.75a.75.75 0 00-1.5 0v12.5c0 .414.336.75.75.75h14.5a.75.75 0 000-1.5H1.5V1.75zm14.28 2.53a.75.75 0 00-1.06-1.06L10 7.94 7.53 5.47a.75.75 0 00-1.06 0L3.22 8.72a.75.75 0 001.06 1.06L7 7.06l2.47 2.47a.75.75 0 001.06 0l5.25-5.25z"
-                    />
-                  </svg>
-                  Ver Datos
-                </button>
-                <button class="gh-control-btn" onclick="console.log(advancedForm.getLogs())">
-                  <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-                    <path
-                      d="M8 1.5c-2.363 0-4 1.69-4 3.75 0 .984.424 1.625.984 2.304l.214.253c.223.264.47.556.673.848.284.411.537.896.621 1.49a.75.75 0 01-1.484.211c-.04-.282-.163-.547-.37-.847a8.695 8.695 0 00-.542-.68c-.084-.1-.173-.205-.268-.32C3.201 7.75 2.5 6.766 2.5 5.25 2.5 2.31 4.863 0 8 0s5.5 2.31 5.5 5.25c0 1.516-.701 2.5-1.328 3.259-.095.115-.184.22-.268.319-.207.245-.383.453-.541.681-.208.3-.33.565-.37.847a.75.75 0 01-1.485-.212c.084-.593.337-1.078.621-1.489.203-.292.45-.584.673-.848.075-.088.147-.173.213-.253.561-.679.985-1.32.985-2.304 0-2.06-1.637-3.75-4-3.75zM5.75 12h4.5a.75.75 0 010 1.5h-4.5a.75.75 0 010-1.5zM6 15.25a.75.75 0 01.75-.75h2.5a.75.75 0 010 1.5h-2.5a.75.75 0 01-.75-.75z"
-                    />
-                  </svg>
-                  Ver Logs
-                </button>
-              </div>
-            </div>
-
-            <div class="gh-code-section">
-              <div class="gh-code-header">
-                <h5 class="gh-code-title">Código de Ejemplo</h5>
-                <div class="gh-code-tabs">
-                  <button
-                    class="gh-code-tab gh-code-tab-active"
-                    onclick="showCodeTab('advanced', 'js')"
-                  >
-                    JavaScript
-                  </button>
-                  <button class="gh-code-tab" onclick="showCodeTab('advanced', 'html')">
-                    HTML
-                  </button>
-                  <button class="gh-code-tab" onclick="showCodeTab('advanced', 'config')">
-                    Config
-                  </button>
-                </div>
-                <button class="gh-copy-btn" onclick="copyCode('advanced')">
-                  <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-                    <path
-                      d="M0 6.75C0 5.784.784 5 1.75 5h1.5a.75.75 0 010 1.5h-1.5a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-1.5a.75.75 0 011.5 0v1.5A1.75 1.75 0 019.25 16h-7.5A1.75 1.75 0 010 14.25v-7.5z"
-                    />
-                    <path
-                      d="M5 1.75C5 .784 5.784 0 6.75 0h7.5C15.216 0 16 .784 16 1.75v7.5A1.75 1.75 0 0114.25 11h-7.5A1.75 1.75 0 015 9.25v-7.5zm1.75-.25a.25.25 0 00-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 00.25-.25v-7.5a.25.25 0 00-.25-.25h-7.5z"
-                    />
-                  </svg>
-                  Copiar
-                </button>
-              </div>
-
-              <div id="advanced-js-code" class="gh-code-content">
-                <pre id="advanced-js-content"></pre>
-              </div>
-
-              <div id="advanced-html-code" class="gh-code-content gh-code-hidden">
-                <pre id="advanced-html-content"></pre>
-              </div>
-
-              <div id="advanced-config-code" class="gh-code-content gh-code-hidden">
-                <pre id="advanced-config-content"></pre>
-              </div>
-            </div>
           </div>
         </div>
       </div>
