fix format code

--- a/form-modules/examples/index.html
+++ b/form-modules/examples/index.html
@@ -293,21 +293,11 @@
                   </div>
                   <div class="gh-form-actions-section">
                     <div class="gh-form-actions">
-                      <button class="gh-action-tab" onclick="resetForm()">
-                        Limpiar
-                      </button>
-                      <button class="gh-action-tab" onclick="toggleDebugMode()">
-                        Debug
-                      </button>
-                      <button class="gh-action-tab" onclick="toggleDevMode()">
-                        Dev Mode
-                      </button>
-                      <button class="gh-action-tab" onclick="showFormData()">
-                        Ver Datos
-                      </button>
-                      <button class="gh-action-tab" onclick="showLogs()">
-                        Ver Logs
-                      </button>
+                      <button class="gh-action-tab" onclick="resetForm()">Limpiar</button>
+                      <button class="gh-action-tab" onclick="toggleDebugMode()">Debug</button>
+                      <button class="gh-action-tab" onclick="toggleDevMode()">Dev Mode</button>
+                      <button class="gh-action-tab" onclick="showFormData()">Ver Datos</button>
+                      <button class="gh-action-tab" onclick="showLogs()">Ver Logs</button>
                     </div>
                   </div>
                   <div class="gh-form-container">
@@ -530,7 +520,6 @@
                   </div>
                   <div class="gh-code-container">
                     <div class="gh-code-section">
-
                       <div id="advanced-js-code" class="gh-code-content">
                         <pre id="advanced-js-content"></pre>
                       </div>
@@ -542,7 +531,7 @@
                   </div>
                 </div>
               </div>
-              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -556,7 +545,9 @@
           <h3 class="gh-modal-title" id="modal-title">Resultado</h3>
           <button class="gh-modal-close" onclick="closeModal()">
             <svg class="gh-icon" viewBox="0 0 16 16" fill="currentColor">
-              <path d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"/>
+              <path
+                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
+              />
             </svg>
           </button>
         </div>
