--- a/form-modules/examples/test.html
+++ b/form-modules/examples/test.html
@@ -138,15 +138,15 @@
           <!-- HEADER: Solo título fijo -->
           <div class="form-header">
             <h2 class="form-title">Inscripción Open Day</h2>
+
+            <p class="form-description">
+              Completa el formulario para reservar tu lugar en nuestro evento
+            </p>
           </div>
 
           <form id="formMini" novalidate aria-label="Prueba 1: Configuración Base">
             <!-- CONTENT: Descripción + campos + autorización con scroll -->
             <div class="form-content">
-              <p class="form-description">
-                Completa el formulario para reservar tu lugar en nuestro evento
-              </p>
-
               <!-- Nombres y apellidos -->
               <div class="field-group">
                 <div class="field">
@@ -253,7 +253,7 @@
 
             <!-- FOOTER: Solo botón fijo -->
             <div class="form-footer">
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -408,7 +408,7 @@
 
             <!-- FOOTER: Solo botón fijo -->
             <div class="form-footer">
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -552,7 +552,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -703,7 +703,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -860,7 +860,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -1007,7 +1007,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -1153,7 +1153,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -1309,7 +1309,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -1463,7 +1463,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
@@ -1631,7 +1631,7 @@
                   </div>
                 </div>
               </div>
-              <button type="submit" class="btn-primary">Inscríbete</button>
+              <button type="submit" class="btn btn-solid">Inscríbete</button>
             </div>
           </form>
         </div>
