add: se agrega la configuraciónde ciudades parcialemnte y se ajusta elf ormateo por prettier

--- a/examples/test.html
+++ b/examples/test.html
@@ -93,7 +93,7 @@
 
             <!-- Ubicación -->
             <div class="field">
-              <select name="country" class="country-select">
+              <select name="country">
                 <option value="">*País de residencia</option>
               </select>
             </div>
