se agrega colegios

--- a/examples/test.html
+++ b/examples/test.html
@@ -1428,21 +1428,7 @@
           <!-- Colegio -->
           <div class="field">
             <select name="school">
-              <option value="">Colegio de origen (opcional)</option>
-            </select>
-          </div>
-
-          <!-- Universidad -->
-          <div class="field">
-            <select name="university">
-              <option value="">Universidad de origen (opcional)</option>
-            </select>
-          </div>
-
-          <!-- Empresa -->
-          <div class="field">
-            <select name="company">
-              <option value="">Empresa (opcional)</option>
+              <option value="">Selecciona el colegio</option>
             </select>
           </div>
 
@@ -1470,7 +1456,7 @@
           <!-- Período de ingreso -->
           <div class="field">
             <select name="admission_period" style="display: none">
-              <option value="">*Periodo esperado de Ingreso de interés</option>
+              <option value="">*Periodo de Ingreso</option>
             </select>
           </div>
 
